frontend/deployment.yaml
---
apiVersion: "extensions/v1beta1"
kind: "Deployment"
metadata:
  name: "ibeer-frontend"
  namespace: "default"
  labels:
    app: "ibeer-frontend"
spec:
  replicas: 3
  selector:
    matchLabels:
      app: "ibeer-frontend"
  template:
    metadata:
      labels:
        app: "ibeer-frontend"
    spec:
      containers:
      - name: "ibeer-frontend-sha256"
        image: "gcr.io/ovg-training/github.com/oliviervg1/ibeer-frontend@sha256:da8e768e4223a45093813c9709f720a4d33701f4e31a8be460fddea11013efdc"

---
apiVersion: "v1"
kind: "Service"
metadata:
  name: "ibeer-frontend-service"
  namespace: "default"
  labels:
    app: "ibeer-frontend"
spec:
  ports:
  - port: 8000
    name: http
  selector:
    app: "ibeer-frontend"
  type: "ClusterIP"

---
apiVersion: networking.istio.io/v1alpha3
kind: ServiceEntry
metadata:
  name: brewerydb
spec:
  hosts:
  - sandbox-api.brewerydb.com
  ports:
  - number: 443
    name: https
    protocol: HTTPS
  resolution: DNS
  location: MESH_EXTERNAL

---
apiVersion: networking.istio.io/v1alpha3
kind: VirtualService
metadata:
  name: brewerydb
spec:
  hosts:
  - sandbox-api.brewerydb.com
  tls:
  - match:
    - port: 443
      sni_hosts:
      - sandbox-api.brewerydb.com
    route:
    - destination:
        host: sandbox-api.brewerydb.com
        port:
          number: 443
      weight: 100
