frontend/networking.yaml
---
apiVersion: networking.istio.io/v1alpha3
kind: Gateway
metadata:
  name: ibeer-frontend-gateway
spec:
  selector:
    istio: ingressgateway # use Istio default gateway implementation
  servers:
  - port:
      number: 80
      name: http
      protocol: HTTP
    hosts:
    - "*"

---
apiVersion: networking.istio.io/v1alpha3
kind: VirtualService
metadata:
  name: ibeer-frontend-virtual-service
spec:
  hosts:
  - "*"
  gateways:
  - ibeer-frontend-gateway
  http:
  - match:
    - uri:
        prefix: /
    route:
    - destination:
        port:
          number: 8000
        host: ibeer-frontend-service
